==> tqf-888/86_djysrc/bsp/cpudrv/Atmel/Sam4e/src/uart/cpu_peri_uart.c <==
#include <stdbool.h>
#include "cpu_peri.h"
#include "stdio.h"
#include <device/djy_uart.h>
#include "string.h"
#include "project_config.h"    //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_UART    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_UART0_SENDBUF_LEN   256            //"UART0发送缓冲区大小",
#define CFG_UART0_RECVBUF_LEN   256            //"UART0接收缓冲区大小",
#define CFG_UART0_DMABUF_LEN    64             //"UART0DMA缓冲区大小",
#define CFG_UART1_SENDBUF_LEN   256            //"UART1发送缓冲区大小",
#define CFG_UART1_RECVBUF_LEN   256            //"UART1接收缓冲区大小",
#define CFG_UART1_DMABUF_LEN    64             //"UART1DMA缓冲区大小",
#define CFG_USART0_SENDBUF_LEN  256           //"USART0发送缓冲区大小",
#define CFG_USART0_RECVBUF_LEN  256           //"USART0接收缓冲区大小",
#define CFG_USART0_DMABUF_LEN   64            //"USART0DMA缓冲区大小",
#define CFG_USART1_SENDBUF_LEN  256           //"USART1发送缓冲区大小",
#define CFG_USART1_RECVBUF_LEN  256           //"USART1接收缓冲区大小",
#define CFG_USART1_DMABUF_LEN   64            //"USART1DMA缓冲区大小",
#define CFG_UART0_ENABLE        true          //"是否配置UART0",
#define CFG_UART1_ENABLE        false         //"是否配置UART1",
#define CFG_USART0_ENABLE       false         //"是否配置USART0",
#define CFG_USART1_ENABLE       false         //"是否配置USART1",
#define CN_UART0_BASE   ((u32)UART0)
#define CN_UART1_BASE   ((u32)UART1)
#define CN_USART0_BASE  ((u32)USART0)
#define CN_USART1_BASE  ((u32)USART1)

void __UART_BaudSet(tagUartReg volatile *reg,u32 baud)
{
    reg->UART_BRGR = (CN_CFG_MCLK/baud)/16;
    if(tg_UART_Reg[TxDirectPort] == reg)
    {
        TxByteTime = 11000000/baud;     //1个字节传输时间，按10bit，+10%计算
    }
}

void __UART_IntInit(u32 SerialNo)
{
    uint32_t int_line;
    if(SerialNo == CN_UART0)
        int_line = CN_INT_LINE_UART0;
    else if(SerialNo == CN_UART1)
        int_line = CN_INT_LINE_UART1;
    else if(SerialNo == CN_USART0)
        int_line = CN_INT_LINE_USART0;
    else
        int_line = CN_INT_LINE_USART1;

    Int_Register(int_line);
    Int_SetClearType(int_line,CN_INT_CLEAR_AUTO);
    Int_IsrConnect(int_line,UART_ISR);
    Int_SettoAsynSignal(int_line);
    Int_ClearLine(int_line);
    Int_RestoreAsynLine(int_line);
}

void __UART_HardInit(u8 SerialNo)
{
    tagUartReg *reg;
    if(SerialNo > CN_UART_MAX)
        return;

    __UART_PmcInit(SerialNo);
    __UART_GpioInit(SerialNo);

    reg = (tagUartReg *)tg_UART_Reg[SerialNo];
    __UART_BaudSet(reg,115200);            //波特率设置
    reg->UART_MR = 0x000;                  //偶校验，正常模式
    reg->UART_CR = ((1<<2)|(1<<3)|(1<<5)|
                    (1<<7)|(1<<8));         //接收发送都除能了

    reg->UART_MR = 0x00C0;//停止位:1 奇偶校验:偶
    reg->UART_CR = ((1<<4)|(1<<6));// tx rx enable
}

ptu32_t __UART_Ctrl(tagUartReg *Reg,u32 cmd, va_list *arg0)
{
    u8 Port;
    switch((u32)Reg)
    {
    case CN_UART0_BASE: Port = CN_UART0;break;
    case CN_UART1_BASE: Port = CN_UART1;break;
    case CN_USART0_BASE: Port = CN_USART0;break;
    case CN_USART1_BASE: Port = CN_USART1;break;
    default:return 0;
    }

    switch(cmd)
    {
        case CN_DEV_CTRL_START:
            __UART_RecvIntEnable(Reg,s_UART_DmaUsed[Port]);
            __UART_SendIntEnable(Reg,s_UART_DmaUsed[Port]);
            break;
        case CN_DEV_CTRL_STOP:
            __UART_RecvIntDisable(Reg,s_UART_DmaUsed[Port]);
            __UART_SendIntDisable(Reg,s_UART_DmaUsed[Port]);
            break;
        case CN_DEV_CTRL_SHUTDOWN:
            break;
        case CN_DEV_CTRL_SLEEP:
            break;
        case CN_DEV_CTRL_RESUME:
            break;
        case CN_UART_SET_BAUD:  //设置Baud
        {
            u32 data;
            data = va_arg(*arg0, u32);
            __UART_BaudSet(Reg, data);
        }
            break;
//        case CN_UART_RX_PAUSE:      //暂停接收
//            __UART_RecvIntEnable(Reg,s_UART_DmaUsed[Port]);
//            break;
//        case CN_UART_RX_RESUME:      //恢复接收
//            __UART_RecvIntDisable(Reg,s_UART_DmaUsed[Port]);
//            break;
        case CN_UART_RECV_HARD_LEVEL:    //因为UART没有FIFO，因此配置DMA接收
        {
            u32 data;
            data = va_arg(*arg0, u32);
            __UART_dma_recv_config(Reg,Port,data);
        }
            break;
//        case CN_UART_HALF_DUPLEX_SEND:
//            Board_UartHalfDuplexSend(Port);
//            break;
//        case CN_UART_HALF_DUPLEX_RECV:
//            Board_UartHalfDuplexRecv(Port);
//            break;
        case CN_UART_DMA_USED:
        case CN_UART_DMA_UNUSED:
            __UART_DMA_Config(Reg,cmd,Port);
            break;
        default: break;
    }
    return 0;
}

u32 __UART_SendStart(tagUartReg *Reg)
{
    u8 Port;

    switch((u32)Reg)
    {
    //UART0和UART1的FIFO深度为8，而其他的为1
    case CN_UART0_BASE: Port = CN_UART0; break;
    case CN_UART1_BASE:Port = CN_UART1;break;
    case CN_USART0_BASE:Port = CN_USART0;break;
    case CN_USART1_BASE:Port = CN_USART1; break;
    default:return 0;
    }
    Board_UartHalfDuplexSend(Port);
    __UART_SendIntEnable(Reg,s_UART_DmaUsed[Port]);
    return 1;
}

uint32_t UART_ISR(ptu32_t IntLine)
{
    static struct UartGeneralCB *UCB;
    tagUartReg *Reg;
    s32 timeout = 1000;
    uint8_t ch,*puart_dma_send_buf,*puart_dma_recv_buf;
    uint32_t IIR=0,Port,DmaBufLen,DmaRcvLen,num;

    switch(IntLine)
    {
        case CN_INT_LINE_UART0:
            Port = CN_UART0;
            UCB = pUartCB[Port];
            Reg =  (tagUartReg *)CN_UART0_BASE;
            DmaBufLen = CFG_UART0_DMABUF_LEN;
            DmaRcvLen = s_UART0_DmaRcvLen;
            puart_dma_send_buf = (uint8_t*)UART0_DmaSendBuf;
            puart_dma_recv_buf = (uint8_t*)UART0_DmaRecvBuf;
            break;

        case CN_INT_LINE_UART1:
            Port = CN_UART1;
            UCB = pUartCB[Port];
            Reg =  (tagUartReg *)CN_UART1_BASE;
            DmaBufLen = CFG_UART1_DMABUF_LEN;
            DmaRcvLen = s_UART1_DmaRcvLen;
            puart_dma_send_buf = (uint8_t*)UART1_DmaSendBuf;
            puart_dma_recv_buf = (uint8_t*)UART1_DmaRecvBuf;
            break;

        case CN_INT_LINE_USART0:
            Port = CN_USART0;
            UCB = pUartCB[Port];
            Reg =  (tagUartReg *)CN_UART1_BASE;
            DmaBufLen = CFG_USART0_DMABUF_LEN;
            DmaRcvLen = s_USART0_DmaRcvLen;
            puart_dma_send_buf = (uint8_t*)USART0_DmaSendBuf;
            puart_dma_recv_buf = (uint8_t*)USART0_DmaRecvBuf;
            break;

        case CN_INT_LINE_USART1:
            Port = CN_USART1;
            UCB = pUartCB[Port];
            Reg =  (tagUartReg *)CN_UART1_BASE;
            DmaBufLen = CFG_USART1_DMABUF_LEN;
            DmaRcvLen = s_USART1_DmaRcvLen;
            puart_dma_send_buf = (uint8_t*)USART1_DmaSendBuf;
            puart_dma_recv_buf = (uint8_t*)USART1_DmaRecvBuf;
            break;
        default:
            return 0;
    }

    IIR = Reg->UART_SR;

    if(s_UART_DmaUsed[Port] == cn_dma_unused)//非DMA方式发送和接收
    {
        if((IIR & (1<<0)) && (Reg->UART_IMR &(1<<0)))//rxrdy int
        {
            ch = Reg->UART_RHR;
            num = UART_PortWrite(UCB,&ch,1);
            if(num != 1)
            {
                UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
            }
        }
        //tx empty int
        if((IIR &(1<<9)) && (Reg->UART_IMR &(1<<9)))
        {
            num = UART_PortRead(UCB,&ch,1);
            while((!__UART_TxTranEmpty(Reg)) && (timeout-- > 0));
            if(num != 0)
                Reg->UART_THR = ch;
            else
            {
                Board_UartHalfDuplexRecv(Port);
                __UART_SendIntDisable(Reg,s_UART_DmaUsed[Port]);
            }
        }
    }
    else            //DMA方式发送和接收
    {
        if((IIR & (1<<3)) && (Reg->UART_IMR &(1<<3)))//endrx int
        {
            if(DmaRcvLen > DmaBufLen)                   //计算从DMA BUF中读多少数据
                num = DmaBufLen;
            else
                num = DmaRcvLen;
            UART_PortWrite(UCB,puart_dma_recv_buf,num);

            DmaRcvLen = DmaRcvLen - num;
            if(DmaRcvLen > DmaBufLen)                   //计算下次DMA接收数据量
                Reg->UART_RCR  = DmaBufLen;
            else if(DmaRcvLen > 1)
                Reg->UART_RCR = DmaRcvLen;
            else                                        //接收DMA最少为1
            {
                Reg->UART_RCR = 1;
                DmaRcvLen = 1;
            }

            Reg->UART_RPR = (vu32)puart_dma_recv_buf;
        }
        if((IIR & (1<<11)) && (Reg->UART_IMR &(1<<11)))//txbufe int
        {
            while(!(Reg->UART_SR & (1<<9)));//wait for empty

            num = UART_PortRead(UCB,puart_dma_send_buf, DmaBufLen);
            if(num > 0)
            {
                Reg->UART_PTCR = (1<<9);//diable dma tx
                if((Reg->UART_TCR==0)&&(Reg->UART_TNCR==0))
                {
//                    num = UART_PortRead(UCB,puart_dma_send_buf,
//                          DmaBufLen,0);
                    Reg->UART_TPR  = (uint32_t)puart_dma_send_buf;
                    Reg->UART_TCR  = num;
                }
                Reg->UART_PTCR = (1<<8);//enable dma tx
            }
            else
            {
                //是否需禁止 dma tx int
                while(!__UART_TxTranEmpty(Reg));
                __UART_SendIntDisable(Reg,s_UART_DmaUsed[Port]);
            }
        }
    }

    if(IIR &(0xE0)) //其他中断
    {
        UART_ErrHandle(UCB,CN_UART_HARD_COMM_ERR);
    }

    return 0;
}

ptu32_t ModuleInstall_UART(ptu32_t SerialNo)
{
    struct UartParam UART_Param;

    switch(SerialNo)
    {
    case CN_UART0://串口1
        UART_Param.Name         = "UART0";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = (ptu32_t)CN_UART0_BASE;
        UART_Param.TxRingBufLen = CFG_UART0_SENDBUF_LEN;
        UART_Param.RxRingBufLen = CFG_UART0_RECVBUF_LEN;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    case CN_UART1://串口2
        UART_Param.Name         = "UART1";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = (ptu32_t)CN_UART1_BASE;
        UART_Param.TxRingBufLen = CFG_UART1_SENDBUF_LEN;
        UART_Param.RxRingBufLen = CFG_UART1_RECVBUF_LEN;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    case CN_USART0://串口1
        UART_Param.Name         = "USART0";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = (ptu32_t)CN_USART0_BASE;
        UART_Param.TxRingBufLen = CFG_USART0_SENDBUF_LEN;
        UART_Param.RxRingBufLen = CFG_USART0_RECVBUF_LEN;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    case CN_USART1://串口2
        UART_Param.Name         = "USART1";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = (ptu32_t)CN_USART1_BASE;
        UART_Param.TxRingBufLen = CFG_USART1_SENDBUF_LEN;
        UART_Param.RxRingBufLen = CFG_USART1_RECVBUF_LEN;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    default:
        return 0;
    }
    UART_Param.mode = CN_UART_GENERAL;
    //硬件初始化
    __UART_HardInit(SerialNo);
    __UART_IntInit(SerialNo);

    pUartCB[SerialNo] = UART_InstallGeneral(&UART_Param);
    if( pUartCB[SerialNo] == NULL)
        return 0;
    else
        return 1;
}

void Stdio_KnlInOutInit(char * StdioIn, char *StdioOut)
{
    if(!strcmp(StdioOut,"/dev/UART0"))
    {
        PutStrDirectReg = (tagUartReg*)CN_UART0_BASE;
        TxDirectPort = CN_UART0;
    }
    else if(!strcmp(StdioOut,"/dev/UART1"))
    {
        PutStrDirectReg = (tagUartReg*)CN_UART1_BASE;
        TxDirectPort = CN_UART1;
    }
    else if(!strcmp(StdioOut,"/dev/USART0"))
    {
        PutStrDirectReg = (tagUartReg*)CN_USART0_BASE;
        TxDirectPort = CN_USART0;
    }
    else if(!strcmp(StdioOut,"/dev/USART1"))
    {
        PutStrDirectReg = (tagUartReg*)CN_USART1_BASE;
        TxDirectPort = CN_USART1;
    }
    else
    {
        PutStrDirectReg = NULL ;
    }

    if(PutStrDirectReg != NULL)
    {
        __UART_HardInit(TxDirectPort);
        TxByteTime = 95;      //初始化默认115200，发送一个byte是87uS,+10%容限
        PutStrDirect = Uart_PutStrDirect;
    }

    if(!strcmp(StdioIn,"/dev/UART0"))
    {
        GetCharDirectReg = (tagUartReg*)CN_UART0_BASE;
        RxDirectPort = CN_UART0;
    }
    else if(!strcmp(StdioIn,"/dev/UART1"))
    {
        GetCharDirectReg = (tagUartReg*)CN_UART1_BASE;
        RxDirectPort = CN_UART1;
    }
    else if(!strcmp(StdioIn,"/dev/USART0"))
    {
        GetCharDirectReg = (tagUartReg*)CN_USART0_BASE;
        RxDirectPort = CN_USART0;
    }
    else if(!strcmp(StdioIn,"/dev/USART1"))
    {
        GetCharDirectReg = (tagUartReg*)CN_USART1_BASE;
        RxDirectPort = CN_USART1;
    }
    else
    {
        GetCharDirectReg = NULL ;
    }
    if(GetCharDirectReg != NULL)
    {
        if(TxDirectPort != RxDirectPort)
            __UART_HardInit(RxDirectPort);
        GetCharDirect = Uart_GetCharDirect;
    }
    return;
}
